spill #3 - Almost fixed the timing issue when img of the seal is activated
- The bug occurs when the seal is switching a sad image and if the user click on the trash items to filter away, then the seal angry image will pop right off below if the image which creates a new row.

--- a/assets/css/spill-3-animation.css
+++ b/assets/css/spill-3-animation.css
@@ -1,3 +1,8 @@
+:root {
+  --seal-open-mouth-img: url('https://github.com/KoichaDev/environment-games/blob/master/assets/img/spill-3/seal-open.png?raw=true');
+  --seal-close-mouth-img: url('https://github.com/KoichaDev/environment-games/blob/master/assets/img/spill-3/seal-lukket.png?raw=true');
+}
+
 /**************************
  ***** Seal Animation *****
  **************************/
@@ -13,11 +18,11 @@
 
 @keyframes wokka {
   0% {
-    background: url('https://github.com/KoichaDev/environment-games/blob/master/assets/img/spill-3/seal-open.png?raw=true');
+    background: var(--seal-open-mouth-img);
   }
 
   50% {
-    background: url('https://github.com/KoichaDev/environment-games/blob/master/assets/img/spill-3/seal-lukket.png?raw=true');
+    background: var(--seal-close-mouth-img);
   }
 }
 
